Restored some settings